--- a/css/style.css
+++ b/css/style.css
@@ -67,8 +67,7 @@ nav a:active {
   padding: 60px 40px;
   background-color: rgba(255, 255, 255, 0.85);
   backdrop-filter: blur(4px);
-  border-radius: 12px; /* removes rounded edges so it touches sides */
-  /*margin: 0;  removes centering constraint */
+  border-radius: 12px;
 }
 
 #intro h2 {
