--- a/css/style.css
+++ b/css/style.css
@@ -142,6 +142,22 @@ nav a:active {
 
 .panel p {
   font-weight: 300;
+  text-align: justify;
+  line-height: 1.5;
+  margin-bottom: 0.5rem;
+}
+
+h3 {
+  text-align: center;
+  margin-bottom: 1rem;
+}
+
+ul {
+  line-height: 1.5;
+  text-align: justify;
+  display: inline-block;
+  margin-top: 0.8rem;
+  padding-left: 1.5rem;
 }
 
 /* ====== FOOTER (Bottom Field) ====== */
